--- a/src/partials/agents.html
+++ b/src/partials/agents.html
@@ -1,53 +1,87 @@
 <section class="agents decorated-section">
-  <div class="agents-title-container decorated-title">
-    <h2 class="agents__title">Agents</h2>
-    <p class="agents__title-copy">Agents</p>
+  <div class="agents__body container">
+    <div class="decorated-title">
+      <h2 class="agents__title">Agents</h2>
+      <p class="agents__title-copy">Agents</p>
+    </div>
+  
+    <div class="agents__content">
+      <picture class="agents__image">
+        <source
+          srcset="
+            ./images/Phoenix.png?as=webp&width=528  1x,
+            ./images/Phoenix.png?as=webp&width=1056 2x,
+            ./images/Phoenix.png?as=webp&width=1584 3x
+          "
+          media="(min-width:1440px)"
+          sizes=""
+          type="image/webp"
+        />
+        <source
+          srcset="
+            ./images/Phoenix.png?width=528  1x,
+            ./images/Phoenix.png?width=1056 2x,
+            ./images/Phoenix.png?width=1584 3x
+          "
+          media="(min-width:1440px)"
+          sizes=""
+          type="image/png"
+        />
+        <source
+          srcset="
+            ./images/Phoenix.png?as=webp&width=266 1x,
+            ./images/Phoenix.png?as=webp&width=532 2x,
+            ./images/Phoenix.png?as=webp&width=798 3x
+          "
+          media=""
+          sizes=""
+          type="image/webp"
+        />
+        <source
+          srcset="
+            ./images/Phoenix.png?as=webp&width=266 1x,
+            ./images/Phoenix.png?as=webp&width=532 2x,
+            ./images/Phoenix.png?as=webp&width=798 3x
+          "
+          media=""
+          sizes=""
+          type="image/png"
+        />
+        <img src="./images/Phoenix.png" alt="Phoenix image" />
+      </picture>
+      <p class="agents-check-all">Check all agents</p></dp>
+  
+      <p class="agents__text1">
+        Blend your style and experience on a global, competitive stage. You have
+        13 rounds to attack and defend your side using sharp gunplay and tactical
+        abilities. And, with one life per-round, you'll need to think faster than
+        your opponent if you want to survive. Take on foes across Competitive and
+        Unranked modes as well as Deathmatch and Spike Rush. <br />
+        Blend your style and experience on a global, competitive stage. You have
+        13 rounds to attack and defend your side using sharp gunplay and tactical
+        abilities. And, with one life per-round, you'll need to think faster than
+        your opponent if you want to survive. Take on foes across Competitive and
+        Unranked modes as well as Deathmatch and Spike Rush.
+      </p>
+  
+      <a href="#" class="agents__button">Agents</a>
+  
+      <p class="agents__text2">
+        Blend your style and experience on a global, competitive stage. You have
+        13 rounds to attack and defend your side using sharp gunplay and tactical
+        abilities. And, with one life per-round, you'll need to think faster than
+        your opponent if you want to survive. Take on foes across Competitive and
+        Unranked modes as well as Deathmatch and Spike Rush. <br />
+        Blend your style and experience on a global, competitive stage. You have
+        13 rounds to attack and defend your side using sharp gunplay and tactical
+        abilities. And, with one life per-round, you'll need to think faster than
+        your opponent if you want to survive. Take on foes across Competitive and
+        Unranked modes as well as Deathmatch and Spike Rush.
+      </p>
+  
+  
+      <p class="agents__aside decorated-aside">Agents</p>
   </div>
-
-  <div class="agents__content">
-    <picture class="agents__image">
-      <source
-        srcset="
-          ./images/Phoenix.png?as=webp&width=528  1x,
-          ./images/Phoenix.png?as=webp&width=1056 2x,
-          ./images/Phoenix.png?as=webp&width=1584 3x
-        "
-        media="(min-width:1440px)"
-        sizes=""
-        type="image/webp"
-      />
-      <source
-        srcset="
-          ./images/Phoenix.png?width=528  1x,
-          ./images/Phoenix.png?width=1056 2x,
-          ./images/Phoenix.png?width=1584 3x
-        "
-        media="(min-width:1440px)"
-        sizes=""
-        type="image/png"
-      />
-      <source
-        srcset="
-          ./images/Phoenix.png?as=webp&width=266 1x,
-          ./images/Phoenix.png?as=webp&width=532 2x,
-          ./images/Phoenix.png?as=webp&width=798 3x
-        "
-        media=""
-        sizes=""
-        type="image/webp"
-      />
-      <source
-        srcset="
-          ./images/Phoenix.png?as=webp&width=266 1x,
-          ./images/Phoenix.png?as=webp&width=532 2x,
-          ./images/Phoenix.png?as=webp&width=798 3x
-        "
-        media=""
-        sizes=""
-        type="image/png"
-      />
-      <img src="./images/Phoenix.png" alt="Phoenix image" />
-    </picture>
-    <div class="video-placeholder"></div>
+  
   </div>
 </section>
