--- a/src/partials/agents.html
+++ b/src/partials/agents.html
@@ -1,6 +1,6 @@
 <section class="agents decorated-section">
-  <div class="agents__body container">
-    <div class="decorated-title">
+  <div class="agents__body container-new">
+    <div class="decorated-title agents-title-container">
       <h2 class="agents__title">Agents</h2>
       <p class="agents__title-copy">Agents</p>
     </div>
