--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,5 +1,5 @@
 <section class="hero">
-  <div class="hero__body container">
+  <div class="hero__body container-new">
     <p class="hero__subtitle">A 5v5 character -based tactical shooter</p>
     <h1 class="hero__title">vALORaNT</h1>
     <p class="hero-text">
