--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,5 +1,5 @@
 <section class="about">
-  <div class="about__body container">
+  <div class="about__body container-new">
     <div class="about__title-container">
       <h2 class="about__title">About the game</h2>
       <p class="about__title-copy">About the game</p>
