--- a/src/sass/utils/_vars.scss
+++ b/src/sass/utils/_vars.scss
@@ -14,4 +14,6 @@
   --second-pseudoelement-height: 0;
   --second-pseudoelement-right: 0;
   --second-pseudoelement-top: 0;
+
+  --cutting-element-width: 0;
 }
