--- a/src/partials/agents.html
+++ b/src/partials/agents.html
@@ -1,5 +1,6 @@
-<section class="agents decorated-section">
+<section class="agents decorated-section cut">
   <div class="agents__body container-new">
+    <div class="cut-right"></div>
     <div class="decorated-title agents-title-container">
       <h2 class="agents__title">Agents</h2>
       <p class="agents__title-copy">Agents</p>
