--- a/src/partials/agents.html
+++ b/src/partials/agents.html
@@ -1,5 +1,6 @@
 <section class="agents decorated-section cut">
   <div class="agents__body container-new">
+    <div class="second-decoration-div"></div>
     <div class="cut-right"></div>
     <div class="decorated-title agents-title-container">
       <h2 class="agents__title">Agents</h2>
@@ -10,9 +11,9 @@
       <picture class="agents__image">
         <source
           srcset="
-            ./images/Phoenix.png?as=webp&width=528  1x,
-            ./images/Phoenix.png?as=webp&width=1056 2x,
-            ./images/Phoenix.png?as=webp&width=1584 3x
+            ./images/Phoenix.png?as=webp&width=587  1x,
+            ./images/Phoenix.png?as=webp&width=1174  2x,
+            ./images/Phoenix.png?as=webp&width=1761 3x
           "
           media="(min-width:1440px)"
           sizes=""
@@ -20,9 +21,9 @@
         />
         <source
           srcset="
-            ./images/Phoenix.png?width=528  1x,
-            ./images/Phoenix.png?width=1056 2x,
-            ./images/Phoenix.png?width=1584 3x
+            ./images/Phoenix.png?width=587  1x,
+            ./images/Phoenix.png?width=1174 2x,
+            ./images/Phoenix.png?width=1761 3x
           "
           media="(min-width:1440px)"
           sizes=""
@@ -50,8 +51,13 @@
         />
         <img src="./images/Phoenix.png" alt="Phoenix image" />
       </picture>
-      <p class="agents-check-all">Check all agents</p></dp>
+      <p class="agents-check-all">Check all agents</p></div>
+      
   
+     
+      
+
+
       <p class="agents__text1">
         Blend your style and experience on a global, competitive stage. You have
         13 rounds to attack and defend your side using sharp gunplay and tactical
@@ -64,9 +70,9 @@
         your opponent if you want to survive. Take on foes across Competitive and
         Unranked modes as well as Deathmatch and Spike Rush.
       </p>
-  
+    
       <a href="#" class="agents__button">Agents</a>
-  
+    
       <p class="agents__text2">
         Blend your style and experience on a global, competitive stage. You have
         13 rounds to attack and defend your side using sharp gunplay and tactical
@@ -79,10 +85,11 @@
         your opponent if you want to survive. Take on foes across Competitive and
         Unranked modes as well as Deathmatch and Spike Rush.
       </p>
-  
-  
+    
+    
       <p class="agents__aside decorated-aside">Agents</p>
   </div>
+  
   
   </div>
 </section>
