--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -32,7 +32,7 @@
         media="(min-width:
       1440px)"
         sizes="771px"
-        type="image/зтп"
+        type="image/png"
       />
       <source
         srcset="
@@ -41,7 +41,7 @@
           ./images/landing-hero-img.png?as=webp&width=1260 3x
         "
         media="(min-width:
-      768px)"
+      882px)"
         sizes="771px"
         type="image/webp"
       />
@@ -52,7 +52,7 @@
           ./images/landing-hero-img.png?width=1260 3x
         "
         media="(min-width:
-      768px)"
+      882px)"
         sizes="771px"
         type="image/png"
       />
