--- a/src/sass/utils/_vars.scss
+++ b/src/sass/utils/_vars.scss
@@ -4,6 +4,7 @@
   --red: #ff4654;
   --lightred: #ff8189;
   --light: #ece8e1;
+  --white: #ffffff;
   --transparent: rgba(0, 0, 0, 0);
 
   --first-pseudoelement-height: 0;
