--- a/src/partials/maps.html
+++ b/src/partials/maps.html
@@ -4,5 +4,12 @@
       <h2 class="maps__title">Maps</h2>
       <p class="maps__title-copy">Maps</p>
     </div>
+    <p class="maps__text">
+      <span class="maps__text-subtitle">Fight around the world</span> <br />
+      Each map is a playground to showcase your creative thinking. Purpose-built
+      for team strategies, spectacular plays, and clutch moments. Make the play
+      others will imitate for years to come.
+    </p>
+    <a href="#" class="maps__button">Maps</a>
   </div>
 </section>
