--- a/src/partials/maps.html
+++ b/src/partials/maps.html
@@ -1,5 +1,5 @@
 <section class="maps">
-  <div class="maps__body">
+  <div class="maps__body container-new">
     <div class="maps__title-container">
       <h2 class="maps__title">Maps</h2>
       <p class="maps__title-copy">Maps</p>
@@ -9,6 +9,114 @@
       Each map is a playground to showcase your creative thinking. Purpose-built
       for team strategies, spectacular plays, and clutch moments. Make the play
       others will imitate for years to come.
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo vel
+      minus, sint culpa perferendis, dolores dicta asperiores recusandae quia
+      veritatis, quidem amet iure earum. Culpa corrupti saepe iure molestiae
+      temporibus magnam itaque, tenetur ea rem maiores id sequi quam repellat ad
+      sint, debitis magni quia qui quidem. Deleniti perspiciatis esse aliquid
+      ipsa numquam quae unde neque ullam obcaecati odio, illum quidem officia.
+      Atque, harum? Voluptatem facilis porro delectus ea tempore asperiores
+      nobis maxime fugit similique! Et, suscipit placeat accusamus expedita
+      dicta, dolore eaque ad aliquid, minima deleniti corporis voluptatum porro
+      mollitia aut autem magnam ducimus cumque maxime commodi laborum ut qui
+      debitis. Praesentium iste id vitae, similique, doloremque, minima quae
+      reiciendis non maiores sapiente ut. Tempora, voluptates quae error
+      recusandae fugit omnis praesentium officiis sapiente, id ipsum animi
+      laborum explicabo? Quam enim facilis quae placeat excepturi natus, iste,
+      soluta, porro magni dolores quas? Esse sunt vitae expedita ea a officiis
+      suscipit recusandae. Adipisci corrupti at esse laboriosam rem, fuga quasi
+      dolorem iusto distinctio nesciunt temporibus laudantium non deleniti ut. A
+      eum labore praesentium sed alias. Eius necessitatibus possimus nemo in cum
+      deserunt aspernatur. Vero, sit delectus laborum exercitationem natus
+      deleniti excepturi dicta. Labore nemo, at repudiandae expedita cumque
+      consequatur vitae quasi officiis quis ab. Repellat accusantium laborum
+      quibusdam quis illo commodi, repellendus molestias a labore, quo
+      dignissimos. Inventore, neque. Laudantium aliquid nostrum magnam et
+      veritatis ullam commodi enim iste, voluptas totam tenetur dignissimos nam
+      vel rem ratione? Sunt doloribus laborum veniam reprehenderit? Voluptas
+      culpa quis sapiente sit necessitatibus recusandae magnam iusto autem
+      repellendus rerum laudantium omnis id illo hic quas at numquam libero, ea
+      dignissimos expedita, ullam sequi vel ad ratione. Assumenda hic, obcaecati
+      alias sit iusto officia deleniti veniam ullam fuga nostrum doloremque
+      numquam illo nobis libero optio quia id expedita dolor! Quo sit ad,
+      tempore deserunt nemo aliquid consectetur libero. Tenetur laudantium
+      possimus beatae tempore qui officia id at mollitia velit aliquam?
+      Recusandae perferendis veritatis accusamus assumenda vel autem cum,
+      praesentium consectetur. Neque, nostrum odio consectetur incidunt enim
+      minus itaque atque. Maxime rerum assumenda officia autem ducimus voluptas
+      quibusdam eveniet quam! Accusantium itaque nisi iure id corrupti quasi
+      ipsam, possimus animi ipsa illo repudiandae vitae molestias voluptatibus
+      quae enim assumenda dolore porro harum rem. Omnis molestiae hic explicabo,
+      repellendus deserunt sit ducimus? Optio placeat nisi voluptate ipsam
+      illum? Doloremque qui tenetur cumque fugit ipsa nemo, mollitia odio
+      deserunt totam assumenda dicta deleniti officia similique error incidunt,
+      ea nostrum omnis labore temporibus repudiandae officiis porro. Molestias
+      eligendi, tempora a ipsum harum culpa laboriosam temporibus, quaerat
+      recusandae sequi quam similique! Nemo necessitatibus praesentium nam
+      maxime cum esse. Mollitia sit consectetur cumque laboriosam itaque, eum
+      odit quas officiis nemo, adipisci in doloremque. Perspiciatis optio
+      ducimus maxime molestiae eveniet atque rerum cumque dolore aut obcaecati
+      sequi aliquam, voluptatibus doloremque! Delectus quasi accusamus minima
+      voluptates dolore culpa maiores obcaecati magni dolorum numquam voluptas
+      molestiae doloribus adipisci officiis pariatur, magnam ad soluta
+      dignissimos consectetur rem tempore rerum facere. Tempora expedita
+      quisquam accusamus dolorem dolore! Quis, numquam dolore? Aliquam at,
+      molestiae quia repellat optio necessitatibus? Lorem ipsum dolor sit amet,
+      consectetur adipisicing elit. Hic debitis magni provident consequuntur
+      nihil totam molestias, nobis ea expedita at doloribus asperiores voluptas
+      omnis distinctio quod vel consectetur harum officia tenetur doloremque
+      odio? Libero est non officiis ad iusto necessitatibus ea exercitationem,
+      eaque minus ut dolorem expedita totam dolore nostrum inventore quidem
+      atque, quaerat laboriosam optio, provident magnam maiores debitis. Tenetur
+      iusto voluptates commodi! Exercitationem maiores hic eaque mollitia dolor,
+      ratione ipsa reiciendis libero dignissimos qui voluptatem quasi ab
+      consectetur temporibus nobis nulla doloremque eum nisi amet tenetur
+      fugiat? Voluptate quo porro est harum autem neque fugit perspiciatis
+      dolore, tempora cupiditate? Enim illo ab non quibusdam a placeat. Nam
+      fugiat ipsum fugit cupiditate vero, officia esse earum optio, voluptatum
+      quis illum aliquam repudiandae odio porro dicta cum magni iusto?
+      Accusantium dolorem similique unde perspiciatis at possimus dolorum
+      provident in repellat odit delectus, repellendus nemo necessitatibus
+      eveniet eaque officiis voluptatibus? Autem corrupti voluptatibus quis
+      accusamus dolore hic quia minus earum totam expedita enim nam repellat,
+      nobis maiores maxime culpa voluptas reprehenderit voluptatem animi saepe
+      officia. Error atque debitis asperiores quis ratione, laboriosam eveniet
+      eos corporis in repudiandae. Quas maxime voluptate nihil pariatur eligendi
+      necessitatibus molestiae repellendus! Omnis, voluptates, perspiciatis
+      dolore ipsam maxime dicta nulla delectus nihil facere vero architecto
+      ullam optio consectetur nam quidem tempore quasi culpa. Porro placeat
+      dolorum commodi sed odio laudantium dolor accusamus, numquam ex atque
+      fugiat voluptas ipsa reprehenderit error! Ullam, fugit laboriosam. Magni
+      quaerat minima ipsam doloribus voluptatem, nostrum repellendus sunt
+      placeat inventore, libero consequatur omnis ipsa quas rerum debitis
+      sapiente, quo deserunt dignissimos accusantium delectus quia dolor
+      laudantium? Minima quis, sequi officiis non perspiciatis, rerum facilis
+      labore fuga recusandae ex ipsa, eligendi sunt tenetur id repellat. Alias
+      nulla ad voluptate earum odit quasi, ab minima non et totam fugiat
+      incidunt aliquam enim perferendis cumque nobis vel tenetur doloremque
+      perspiciatis aspernatur iste. Deleniti vel, labore velit corporis harum, a
+      praesentium voluptatem repudiandae id doloremque atque beatae sunt
+      voluptate fugit reiciendis quae voluptates voluptatum hic accusantium
+      animi! Facilis maxime eligendi optio fuga labore molestias at nesciunt,
+      facere neque quia repudiandae dignissimos rem dolores culpa modi aut
+      architecto expedita. Dolorem facere officia assumenda quis quam! Molestiae
+      doloribus consequatur sunt deleniti quod, aperiam earum ad fugiat eos
+      expedita pariatur neque ut minus hic natus quidem deserunt sequi. Quae
+      laborum earum ratione omnis repellat ad, expedita aliquid iure obcaecati
+      ex ab modi a ullam atque, doloremque dolores. Praesentium officia impedit
+      beatae. Voluptate sed adipisci expedita dignissimos debitis consequatur
+      esse nihil quis, aliquid obcaecati delectus eligendi alias corrupti
+      repellendus error ratione incidunt praesentium nostrum, quibusdam corporis
+      aperiam, exercitationem quas aliquam nam! Dolorum iusto quam error qui
+      doloremque? Nemo tempore voluptate dolorem nostrum, quibusdam vel
+      distinctio adipisci doloribus excepturi unde voluptates dolore nam optio
+      quam architecto dignissimos voluptatibus cum eligendi enim eius laudantium
+      saepe facere amet! Velit reiciendis iusto fugit obcaecati nam alias,
+      deserunt nulla placeat illum, autem iste aspernatur sed? Perferendis
+      delectus inventore facilis tempore error ex ipsa ad molestiae dignissimos
+      nemo sunt et ducimus, expedita velit. Sint vitae sapiente fugit!
     </p>
     <a href="#" class="maps__button">Maps</a>
   </div>
